# zander.client

./: .gitignore  CMakeLists.txt  README.md  assembly.sbt  build.sbt  cxx11.cmake  ext.cmake  log.txt  package.json  pom.xml  test_config.json  zander.cmake
TguJg/: Ro9lPewvKCJ3u3z2SLA.msvc10w64.debug.json
config/: live.config.json  spec.config.json
project/: plugins.sbt
smoke/: CMakeLists.txt  dependencies.cmake  files.cmake
spec/: CMakeLists.txt  dependencies.cmake  files.cmake  main.cpp  package.json
spec/mockbin/: .gitignore  package.json  program.js
spec/src/: _beforeAll.js  config.json  install.js  installMake.js  mock_program.js  mockprogram.js  zander.js
spec/src/install/: install.js  installCMake.js  installMake.js
src/: CMakeLists.txt  config.json  files.cmake  main.cpp  run.js
src/assembly/: bin.xml
src/main/scala/uk/co/morleydev/zander/client/: Arguments.scala  Configuration.scala  Main.scala  Program.scala  ProgramFactory.scala
src/main/scala/uk/co/morleydev/zander/client/controller/: Controller.scala  ControllerFactory.scala  InstallController.scala  PurgeController.scala  UpdateController.scala  package.scala
src/main/scala/uk/co/morleydev/zander/client/data/: ArgumentParser.scala  ArgumentParserWithErrorCodes.scala  BuildModeBuildTypeMap.scala  BuildProjectSource.scala  CMakeBuild.scala  CMakeInstall.scala  CMakePrebuild.scala  CheckArtefactDetailsExist.scala  CompilerGeneratorMap.scala  DataFactory.scala  DeleteProjectArtefactDetails.scala  DeleteProjectArtefacts.scala  DownloadProjectSource.scala  GetProject.scala  GetProjectDto.scala  GetProjectSourceVersion.scala  GitDownload.scala  InstallProjectArtefact.scala  InstallProjectCache.scala  ListProjectCacheFiles.scala  LoadOrCreateConfiguration.scala  NativeProcessBuilder.scala  (+22 more)
src/models/: Project.h
src/test/scala/: GenNative.java
test/: CMakeLists.txt  dependencies.cmake  files.cmake  main.cpp
(+293 files in other folders)
